--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <h1>Магазин побутової техніки:ТехноЧарт</h1>
+    <h1>Магазин побутової техніки:ТехноЧарт!!</h1>
 
     <p>Ласкаво просимо до нашого магазину побутової техніки! У нас ви можете знайти все для дому.</p>
 
